# vault-layer

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Makefile  NOTICE.md  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  gap.md
crates/vault-layer-cli/: Cargo.toml
crates/vault-layer-cli/src/: main.rs
crates/vault-layer-core/: Cargo.toml
crates/vault-layer-core/src/: lib.rs  schema.sql
crates/vault-layer-sqlite-vec/: Cargo.toml
crates/vault-layer-sqlite-vec/src/: lib.rs
docs/: ADR-0001-primary-retrieval-backend.md  ARCHITECTURE.md  FILL_LOOP.md  GO_LOOP_BRIEF.md  HERO_GUIDELINES.md  MAINTAINER_CHECKLIST.md  PACKAGE.md  REPO_COMPLETE.md  ROADMAP.md  TASK_TEMPLATE.md  api.md  architecture.md  backend-decision-benchmark.md  claim-evidence-gate.md  embeddings.md  full-vault-progress-resume.md  full-vault-retrieval-benchmark.md  implementation-plan.md  local-embedding-adapter-blocker.md  local-embedding-adapter.md  mcp.md  niels-pilot-benchmark.md  niels-pilot-install.md  niels-pilot-runbook.md  retrieval-quality-first-pass.md  sqlite-vec-hybrid-retrieval.md  sqlite-vec-packaging-spike.md  synthetic-messy-vault-preflight.md  viewer-adapter.md  wsl-smoke.md
scripts/: benchmark_vault.sh  fastembed_embed.py  make_messy_vault.py  package_pilot.sh  package_smoke.sh  pilot_doctor.sh  validate_repository.py  wsl-smoke.sh
tests/: test_validate_repository.py
