[workspace]
members = [
    "crates/vault-layer-core",
    "crates/vault-layer-sqlite-vec",
    "crates/vault-layer-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/viggomeesters/vault-layer"
authors = ["Viggo Meesters"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
