[package]
name = "vault-layer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled"] }
libsql = "0.3.5"
tokio = { version = "1", features = ["rt-multi-thread"] }
vault-layer-core = { path = "../vault-layer-core" }
vault-layer-sqlite-vec = { path = "../vault-layer-sqlite-vec" }

[lints]
workspace = true
