[package]
name = "vault-layer-sqlite-vec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1.9"
zerocopy = "0.7"

[lints.clippy]
unwrap_used = "deny"

[lints.rust]
unsafe_code = "allow"
